--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -87,7 +87,7 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: vscode-extension
-          path: '*.vsix'
+          path: 'flutter-i18n-vscode-inline-*.vsix'
 
   # 检测版本发布并自动发布到 VS Code Marketplace
   publish:
@@ -144,7 +144,7 @@ jobs:
         with:
           pat: ${{ secrets.AZURE_DEV }}
           registryUrl: https://marketplace.visualstudio.com
-          extensionFile: '*.vsix'
+          extensionFile: 'flutter-i18n-vscode-inline-*.vsix'
 
       - name: Create GitHub Release
         uses: softprops/action-gh-release@v2
@@ -167,10 +167,10 @@ jobs:
             - [Documentation](https://github.com/volankey/Flutter-i18n-VS-Code-Inline#readme)
           draft: false
           prerelease: false
-          files: '*.vsix'
+          files: 'flutter-i18n-vscode-inline-*.vsix'
 
       - name: Upload release artifact
         uses: actions/upload-artifact@v4
         with:
           name: vscode-extension-release-v${{ steps.extract_version.outputs.version }}
-          path: '*.vsix'
+          path: 'flutter-i18n-vscode-inline-*.vsix'
