--- a/.vscodeignore
+++ b/.vscodeignore
@@ -14,6 +14,13 @@ eslint.config.mjs
 .nycrc.json
 .c8rc.json
 .npmrc
+.nyc_output/
+coverage/
+.test-data/
+.trae/
+.vscode-test/
+dist/
+**/*.sh
 
 # Git and version control
 .gitignore
